--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
             <i class="fa-brands fa-discord"></i>
           </a>
 
-          <a href="#" class="navbar-item is-tab" target="_blank">
+          <!-- <a href="#" class="navbar-item is-tab" target="_blank">
             <i class="fa-brands fa-github"></i>
-          </a>
+          </a> -->
 
           <!-- <div class="navbar-item">
             <div class="buttons">
@@ -350,9 +350,9 @@
             <i class="fa-brands fa-discord"></i>
           </a>
           &nbsp; &nbsp;
-          <a href="#" class="has-text-white" target="_blank">
+          <!-- <a href="#" class="has-text-white" target="_blank">
             <i class="fa-brands fa-github"></i>
-          </a>
+          </a> -->
         </div>
 
         <p>
