--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
 
         <div class="navbar-end">
-          <a href="#" class="navbar-item is-tab" target="_blank">
+          <a href="https://discord.gg/qntR6rktcs" class="navbar-item is-tab" target="_blank">
             <i class="fa-brands fa-discord"></i>
           </a>
 
@@ -115,7 +115,7 @@
               <p class="subtitle has-text-grey-light is-size-6 mt-3">
                 This bot is designed to play the Pvrpose Card Game with friends on Discord. It allows users to join the game, draw prompt cards, select a question, and have another player answer it for a fun experience.              </p>
               <div class="buttons">
-                <a href="#" class="button is-info">
+                <a href="https://discord.com/api/oauth2/authorize?client_id=1078630916991230043&permissions=35840&scope=bot" class="button is-info">
                   <strong>Add To Discord</strong>
                 </a>
 
@@ -332,7 +332,7 @@
           <p class="subtitle mt-3 has-text-gray">
             If you have any issues or questions regarding the bot, please don't hesitate to reach out to us at support@example.com. We are always here to help!
           </p>
-          <a href="#" class="button is-blurple is-medium"
+          <a href="https://discord.com/api/oauth2/authorize?client_id=1078630916991230043&permissions=35840&scope=bot" class="button is-blurple is-medium"
             ><strong><i class="fa-solid fa-book"></i> Get Started</strong></a
           >
         </div>
@@ -346,7 +346,7 @@
     <footer class="footer bg-base">
       <div class="content has-text-centered has-text-white">
         <div class="mb-2">
-          <a href="#" class="has-text-white" target="_blank">
+          <a href="https://discord.gg/qntR6rktcs" class="has-text-white" target="_blank">
             <i class="fa-brands fa-discord"></i>
           </a>
           &nbsp; &nbsp;
