--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             Features
           </a>
 
-          <!-- <a href="#stats" class="navbar-item is-tab">
-            Stats
-          </a> -->
+          <a href="https://pvrposegame.com/" class="navbar-item is-tab">
+            About PVRPOSE
+          </a>
 
           <!-- <a href="#" class="navbar-item is-tab">
             Docs
