--- a/index.html
+++ b/index.html
@@ -119,18 +119,22 @@
                   <strong>Add To Discord</strong>
                 </a>
 
-                <a href="#" class="button is-primary is-outlined">
-                  <strong><i class="fa-solid fa-crown"></i> Premium (COMING SOON)</strong>
+                <a href="https://discord.gg/JAkhPZxMXw" class="button is-primary is-outlined">
+                  <strong><i class="fa-solid fa-crown"></i> Find Other Players</strong>
                 </a>
               </div>
             </div>
             <div class="column mt-6" data-aos="fade-left">
-              <img
-                  class="image has-image-centered vert-move mt-4 higher-image"
-                  src="assets/img/1-removebg-preview.png"
-                  alt="hero image"
-                  style="width: 30rem; height: 30rem;"
-              />
+              <div class="has-image-centered vert-move mt-4 higher-image" style="width: 30rem; height: 30rem;">
+                  <img
+                      width="100%"
+                      height="100%"
+                      src="/assets/img/video.gif"
+                      alt="looping gif"
+                  />
+              </div>
+          </div>
+          
           </div>
             </div>
           </div>
@@ -179,7 +183,7 @@
           <div class="column mr-6">
             <h4 class="title">Feature <span class="blurple"># JOIN</span></h4>
             <p class="subtitle mt-3">
-              Join the game by typing !join
+              Join the game by typing /join
 
             </p>
           </div>
@@ -221,7 +225,7 @@
               Feature <span class="has-text-primary"># DRAW</span>
             </h4>
             <p class="subtitle mt-3">
-              Draw a prompt card with two random questions by typing !draw
+              Draw a prompt card with two random questions by typing /draw
 
             </p>
           </div>
